Added Fletchling family. Removed redundant values from template entry.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -354,6 +354,65 @@ habitats = Beach,Freshwater,Marsh
 egg_groups = Monster,Water 1
 family = Tododile,Croconaw,Feraligatr
 capabilities = Overland:7,Swim:8,High Jump:2,Long Jump:2,Power:8,Fountain,Naturewalk:Wetlands
+[Fletchling]
+page = 95
+legendary = False
+base_hp = 5
+base_attack = 5
+base_defense = 4
+base_special_attack = 4
+base_special_defense = 4
+base_speed = 6
+types = Normal,Flying
+basic_abilities = Keen Eye,Tangled Feet
+advanced_abilities = Big Pecks,Gale Wings
+high_ability = Rocket
+evolutions = Fletchinder,15
+minimum_level = 1
+diets = Carnivore
+habitats = Forest,Grassland
+egg_groups = Flying
+family = Fletchling,Fletchinder,Talonflame
+capabilities = Overland:3,Sky:5,High Jump:1,Long Jump:1,Power:1,Guster,Underdog
+[Fletchinder]
+page = 96
+legendary = False
+base_hp = 6
+base_attack = 7
+base_defense = 6
+base_special_attack = 6
+base_special_defense = 5
+base_speed = 8
+types = Fire,Flying
+basic_abilities = Keen Eye,Tangled Feet
+advanced_abilities = Big Pecks,Gale Wings
+high_ability = Rocket
+evolutions = Talonflame,30
+minimum_level = 15
+diets = Carnivore
+habitats = Forest,Grassland
+egg_groups = Flying
+family = Fletchling,Fletchinder,Talonflame
+capabilities = Overland:3,Sky:7,High Jump:2,Long Jump:2,Power:2,Firestarter,Guster,Underdog
+[Talonflame]
+page = 97
+legendary = False
+base_hp = 8
+base_attack = 8
+base_defense = 7
+base_special_attack = 7
+base_special_defense = 7
+base_speed = 13
+types = Fire,Flying
+basic_abilities = Keen Eye,Tangled Feet
+advanced_abilities = Big Pecks,Gale Wings
+high_ability = Rocket
+minimum_level = 30
+diets = Carnivore
+habitats = Forest,Grassland
+egg_groups = Flying
+family = Fletchling,Fletchinder,Talonflame
+capabilities = Overland:4,Sky:8,High Jump:2,Long Jump:2,Power:4,Firestarter,Guster,Mountable:1
 [Oddish]
 page = 125
 legendary = False
@@ -673,11 +732,8 @@ capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:2,Power:3,Tracker
 ; base_special_defense = 
 ; base_speed = 
 ; types = 
-; type_2 = 
 ; basic_abilities = 
-; basic_ability_2 = 
 ; advanced_abilities = 
-; advanced_ability_2 = 
 ; high_ability = 
 ; evolutions = 
 ; minimum_level = 
