--- a/pokemon.ini
+++ b/pokemon.ini
@@ -128,7 +128,7 @@ weight_class = 1
 skills = Athletics:3d6+2,Acrobatics:3d6,Combat:2d6,Stealth:3d6,Perception:2d6,Focus:2d6
 level_moves = 1:Tackle,3:Growl,6:Razor Leaf,9:Poison Powder,12:Synthesis,17:Reflect,20:Magical Leaf,23:Natural Gift,28:Sweet Scent,31:Light Screen,34:Body Slam,39:Safeguard,42:Aromatherapy,45:Solar Beam
 hm_moves = Cut
-tm_moves = Tocix,Hidden Power,Sunny Day,Light Screen,Protect,Safeguard,Frustration,Solar Beam,Return,Double Team,Reflect,Facade,Rest,Attract,Round,Echoed Voice,Energy Ball,Flash,Swords Dance,Grass Knot,Swagger,Sleep Talk,Substitute,Nature Power
+tm_moves = Toxic,Hidden Power,Sunny Day,Light Screen,Protect,Safeguard,Frustration,Solar Beam,Return,Double Team,Reflect,Facade,Rest,Attract,Round,Echoed Voice,Energy Ball,Flash,Swords Dance,Grass Knot,Swagger,Sleep Talk,Substitute,Nature Power
 egg_moves = Ancient Power,Aromatherapy,Body Slam,Counter,Flail,Grass Whistle,Grassy Terrain,Heal Pulse,Ingrain,Leaf Storm,Leech Seed,Nature Power,Refresh,Vine Whip,Wring Out
 tutor_moves = Ancient Power,Bullet Seed,Double-Edge,Fury Cutter,Giga Drain, Glass Pledge,Iron Tail,Magic Coat,Mud-Slap,Role Play,SecretPower,Seed Bomb,Sleep Talk,Snore,Synthesis,Worry Seed
 [Bayleef]
