Finished adding Chikorita family data.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -149,22 +149,20 @@ minimum_level = 15
 diets = Phototroph,Herbivore
 habitats = Forest,Grassland
 egg_groups = Monster,Plant
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = Chikorita,Bayleef,Meganium
 capabilities = Overland:7,Swim:4,High Jump:2,Long Jump:2,Power:3,Naturewalk:Grassland,Naturewalk:Forest,Underdog
-height_imperial = 
-height_metric = 
-height_class = 
-weight_imperial = 
-weight_metric = 
-weight_class = 
-skills = 
-level_moves = 
-hm_moves = 
-tm_moves = 
-egg_moves = 
-tutor_moves = 
+height_imperial = 3'11"
+height_metric = 1.2m
+height_class = Medium
+weight_imperial = 34.8 lbs.
+weight_metric = 15.8kg
+weight_class = 2
+skills = Athletics:4d6+4,Acrobatics:3d6,Combat:2d6+2,Stealth3d6,Perception:3d6,Focus:3d6
+level_moves = 3:Growl,6:Razor Leaf,9:Poison Powder,12:Synthesis,17:Reflect,20:Magical Leaf,23:Natural Gift,28:Sweet Scent,31:Light Screen,34:Body Slam,39:Safeguard,42:Aromatherapy,45:Solar Beam
+hm_moves = Cut,Strength
+tm_moves = Toxic,Hidden Power,Sunny Day,Light Screen,Protect,Safeguard,Frustration,Solar Beam,Return,Double Team,Reflect,Facade,Rest,Attract,Round,Echoed Voice,Energy Ball,Flash,Swords Dance,Grass Knot,Swagger,Sleep Talk,Substitute,Rock Smash,Nature Power
+tutor_moves = Ancient Power,Bullet Seed,Counter,Double-Edge,Fury Cutter,Giga Drain,Grass Pledge,Iron Tail,Magic Coat,Mud-Slap,Role Play,Secret Power,Seed Bomb,Sleep Talk,Snore,Synthesis,Worry Seed
 [Meganium]
 page = 17
 legendary = False
@@ -182,22 +180,20 @@ minimum_level = 30
 diets = Phototroph,Herbivore
 habitats = Forest,Grassland
 egg_groups = Monster,Plant
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = Chikorita,Bayleef,Meganium
 capabilities = Overland:8,Swim:4,High Jump:2,Long Jump:2,Power:4,Naturewalk:Grassland,Naturewalk:Forest
-height_imperial = 
-height_metric = 
-height_class = 
-weight_imperial = 
-weight_metric = 
-weight_class = 
-skills = 
-level_moves = 
-hm_moves = 
-tm_moves = 
-egg_moves = 
-tutor_moves = 
+height_imperial = 5'11"
+height_metric = 1.8m
+height_class = Large
+weight_imperial = 221.6 lbs.
+weight_metric = 100.5kg
+weight_class = 5
+skills = Athletics:5d6+4,Acrobatics:3d6,Combat:3d6+2,Stealth:3d6,Perception:3d6,Focus:5d6
+level_moves = 3:Growl,6:Razor Leaf,9:Poison Powder,12:Synthesis,18:Reflect,22:Magical Leaf,26:Natural Gift,32:Petal Dance,34:Sweet Scent,40:Light Screen,46:Body Slam,54:Safeguard,60:Aromatherapy,66:Solar Beam,70:Petal Blizzard
+hm_moves = Cut,Strength
+tm_moves = Toxic,Hidden Power,Sunny Day,Hyper Beam,Light Screen,Protect,Safeguard,Frustration,Solar Beam,Earthquake,Return,Double Team,Reflect,Facade,Rest,Attract,Round,Echoed Voice,Energy Ball,Giga Impact,Flash,Swords Dance,Bulldoze,Dragon Tail,Grass Knot,Swagger,Sleep Talk,Substitute,Rock Smash,Nature Power
+tutor_moves = Ancient Power,Bullet Seed,Counter,Double-Edge,Frenzy Plant,Fury Cutter,Giga Drain,Grass Pledge,Iron Tail,Magic Coat,Mud-Slap,Outrage,Role Play,Secret Power,Seed Bomb,Sleep Talk,Snore,Synthesis,Worry Seed
 [Charmander]
 page = 30
 legendary = False
