--- a/pokemon.ini
+++ b/pokemon.ini
@@ -194,6 +194,103 @@ level_moves = 3:Growl,6:Razor Leaf,9:Poison Powder,12:Synthesis,18:Reflect,22:Ma
 hm_moves = Cut,Strength
 tm_moves = Toxic,Hidden Power,Sunny Day,Hyper Beam,Light Screen,Protect,Safeguard,Frustration,Solar Beam,Earthquake,Return,Double Team,Reflect,Facade,Rest,Attract,Round,Echoed Voice,Energy Ball,Giga Impact,Flash,Swords Dance,Bulldoze,Dragon Tail,Grass Knot,Swagger,Sleep Talk,Substitute,Rock Smash,Nature Power
 tutor_moves = Ancient Power,Bullet Seed,Counter,Double-Edge,Frenzy Plant,Fury Cutter,Giga Drain,Grass Pledge,Iron Tail,Magic Coat,Mud-Slap,Outrage,Role Play,Secret Power,Seed Bomb,Sleep Talk,Snore,Synthesis,Worry Seed
+[Treecko]
+page = 18
+legendary = False
+base_hp = 4
+base_attack = 5
+base_defense = 4
+base_special_attack = 7
+base_special_defense = 6
+base_speed = 7
+types = Grass
+basic_abilities = Unburden,Overgrow
+advanced_abilities = Run Away,Vanguard
+high_ability = Ambush
+evolutions = Grovyle,15
+minimum_level = 1
+diets = Herbivore
+habitats = Rainforest
+egg_groups = Monster,Dragon
+gender_ratio_m = 87.5
+average_hatch_rate_days = 10
+family = Treecko,Grovyle,Sceptile
+capabilities = Overland:5,Swim:3,High Jump:2,Long Jump:2,Power:2,Wallclimber,Naturewalk:Grassland,Naturewalk:Forest,Underdog
+height_imperial = 1'8"
+height_metric = 0.5m
+height_class = Small
+weight_imperial = 11.0 lbs.
+weight_metric = 5.0kg
+weight_class = 1
+skills = Athletics:3d6,Acrobatics:3d6+3,Combat:2d6,Stealth:3d6+3,Perception:3d6,Focus:2d6
+level_moves = 1:Pound,3:Leer,5:Absorb,9:Quick Attack,13:Mega Drain,17:Pursuit,21:Giga Drain,25:Agility,29:Slam,33:Detect,37:Energy Ball,41:Quick Guard,45:Endeavor,49:Screech
+hm_moves = Cut,Strength
+tm_moves = Toxic,Hidden Power,Sunny Day,Protect,Safeguard,Frustration,Solar Beam,Return,Dig,Brick Break,Double Team,Rock Tomb,Aerial Ace,Facade,Rest,Attract,Round,Energy Ball,Fling,Acrobatics,Flash,Swords Dance,Rock Slide,Grass Knot,Swagger,Sleep Talk,Substitute,Rock Smash,Nature Power,Power-Up Punch,Confide
+egg_moves = Bullet Seed,Crunch,Crush Claw,Double Kick,Dragon Breath,Endeavor,Grass Whistle,Grassy Terrain,Leaf Storm,Leech Seed,Magical Leaf,Mud Sport,Natural Gift,Razor Wind,Synthesis,Worry Seed
+tutor_moves = Body Slam,Counter,Double-Edge,Drain Punch,Dynamic Punch,Endeavor,Focus Punch,Fury Cutter,Giga Drain,Grass Pledge,Iron Tail,Low Kick,Mega Kick,Mega Punch,Mud-Slap,Secret Power,Seed Bomb,Seizmic Toss,Sleep Talk,Snore,Swift,Synthesis,Thunder Punch,Worry Seed
+[Grovyle]
+page = 19
+legendary = False
+base_hp = 5
+base_attack = 7
+base_defense = 5
+base_special_attack = 9
+base_special_defense = 6
+base_speed = 7
+types = Grass
+basic_abilities = Unburden,Overgrow
+advanced_abilities = Run Away,Vanguard
+high_ability = Ambush
+evolutions = Sceptile,30
+minimum_level = 15
+diets = Herbivore
+habitats = Rainforest
+egg_groups = Monster,Dragon
+gender_ratio_m = 87.5
+family = Treecko,Grovyle,Sceptile
+capabilities = Overland:8,Swim:4,High Jump:3,Long Jump:3,Power:3,Wallclimber,Naturewalk:Grassland,Naturewalk:Forest,Underdog
+height_imperial = 2'11"
+height_metric = 0.9m
+height_class = Medium
+weight_imperial = 47.6 lbs.
+weight_metric = 21.6kg
+weight_class = 2
+skills = Athletics:4d6,Acrobatics:4d6+3,Combat:3d6+2,Stealth:5d6+3,Perception:4d6,Focus:3d6
+level_moves = 1:Leer,5:Absorb,9:Quick Attack,13:Mega Drain,16:Fury Cutter,18:Pursuit,23:Leaf Blade,28:Agility,33:Slam,38:Detect,43:X-Scissor,48:False Swipe,53:Quick Guard,58:Leaf Storm,63:Screech
+hm_moves = Cut,Strength
+tm_moves = Toxic,Hidden Power,Sunny Day,Protect,Safeguard,Frustration,Solar Beam,Return,Dig,Brick Break,Double Team,Rock Tomb,Aerial Ace,Facade,Rest,Attract,Low Sweep,Round,Energy Ball,False Swipe,Fling,Acrobatics,Flash,Swords Dance,Rock Slide,X-Scissor,Grass Knot,Swagger,Sleep Talk,Substitute,Rock Smash,Nature Power,Power-Up Punch,Confide
+tutor_moves = Body Slam,Bullet Seed,Counter,Double-Edge,Drain Punch,Dynamic Punch,Endeavor,Focus Punch,Fury Cutter,Giga Drain,Grass Pledge,Iron Tail,Low Kick,Mega Kick,Mega Punch,Mud-Slap,Secret Power,Seed Bomb,Seizmic Toss,Sleep Talk,Snore,Swift,Synthesis,Thunder Punch,Worry Seed
+[Sceptile]
+page = 20
+legendary = False
+base_hp = 7
+base_attack = 9
+base_defense = 7
+base_special_attack = 11
+base_special_defense = 9
+base_speed = 12
+types = Grass
+basic_abilities = Unburden,Overgrow
+advanced_abilities = Run Away,Vanguard
+high_ability = Ambush
+minimum_level = 30
+diets = Omnivore
+habitats = Rainforest
+egg_groups = Monster,Dragon
+gender_ratio_m = 87.5
+family = Treecko,Grovyle,Sceptile
+capabilities = Overland:8,Swim:5,High Jump:3,Long Jump:3,Power:5,Wallkclumber,Naturewalk:Grassland,Naturewalk:Forest
+height_imperial = 5'7"
+height_metric = 1.7m
+height_class = Medium
+weight_imperial = 115.1 lbs.
+weight_metric = 52.2kg
+weight_class = 4
+skills = Athletics:4d6,Acrobatics:5d6+2,Combat:5d6,Stealth:5d6+3,Perception:4d6,Focus:3d6
+level_moves = 1:Leer,5:Absorb,9:Quick Attack,13:Mega Drain,16:Fury Cutter,18:Pursuit,23:Leaf Blade,28:Agility,33:Slam,36:Dual Chop,39:Detect,45:X-Scissor,51:False Swipe,57:Quick Guard,63:Leaf Storm,69:Screech
+hm_moves = Cut,Strength
+tm_moves = Hone Claws,Dragon Claw,Roar,Toxic,Hidden Power,Sunny Day,Hyper Beam,Protect,Safeguard,Frustration,Solar Beam,Earthquake,Return,Dig,Brick Break,Double Team,Rock Tomb,Aerial Ace,Facade,Rest,Attract,Low Sweep,,Round,Focus Blast,Energy Ball,False Swipe,Fling,Acrobatics,Giga Impact,Flash,Swords Dance,Bulldoze,Rock Slide,X-Scissor,Grass Knot,Swagger,Sleep Talk,Substitute,Rock Smash,Nature Power,Power-Up Punch,Confide
+tutor_moves = Body Slam,Bullet Seed,Counter,Double-Edge,Dragon Pulse,Drain Punch,Dynamic Punch,Endeavor,Focus Punch,Frenzy Plant,Fury Cutter,Giga Drain,Grass Pledge,Iron Tail,Low Kick,Mega Kick,Mega Punch,Mud-Slap,Night Slash (N),Outrage,Rock Climb,Secret Power,Seed Bomb,Seizmic Toss,Sleep Talk,Snore,Swift,Synthesis,Thunder Punch,Worry Seed
 [Charmander]
 page = 30
 legendary = False
@@ -1244,6 +1341,7 @@ egg_moves =
 ; weight_class = 
 ; skills = 
 ; level_moves = 
-; tm_moves = 
 ; hm_moves = 
+; tm_moves = 
 ; egg_moves = 
+; tutor_moves = 
