Added Turtwig, Grotle, Torterra data. Added unfilled entries for Snivy family, Chespin family.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -291,6 +291,307 @@ level_moves = 1:Leer,5:Absorb,9:Quick Attack,13:Mega Drain,16:Fury Cutter,18:Pur
 hm_moves = Cut,Strength
 tm_moves = Hone Claws,Dragon Claw,Roar,Toxic,Hidden Power,Sunny Day,Hyper Beam,Protect,Safeguard,Frustration,Solar Beam,Earthquake,Return,Dig,Brick Break,Double Team,Rock Tomb,Aerial Ace,Facade,Rest,Attract,Low Sweep,,Round,Focus Blast,Energy Ball,False Swipe,Fling,Acrobatics,Giga Impact,Flash,Swords Dance,Bulldoze,Rock Slide,X-Scissor,Grass Knot,Swagger,Sleep Talk,Substitute,Rock Smash,Nature Power,Power-Up Punch,Confide
 tutor_moves = Body Slam,Bullet Seed,Counter,Double-Edge,Dragon Pulse,Drain Punch,Dynamic Punch,Endeavor,Focus Punch,Frenzy Plant,Fury Cutter,Giga Drain,Grass Pledge,Iron Tail,Low Kick,Mega Kick,Mega Punch,Mud-Slap,Night Slash (N),Outrage,Rock Climb,Secret Power,Seed Bomb,Seizmic Toss,Sleep Talk,Snore,Swift,Synthesis,Thunder Punch,Worry Seed
+[Turtwig]
+page = 21
+legendary = False
+base_hp = 6
+base_attack = 7
+base_defense = 6
+base_special_attack = 5
+base_special_defense = 6
+base_speed = 3
+types = Grass
+basic_abilities = Shell Armor,Overgrow
+advanced_abilities = Grass Pelt,Sturdy
+high_ability = Natural Cure
+evolutions = Grotle,15
+minimum_level = 1
+diets = Herbivore,Phototroph
+habitats = Forest,Marsh,Rainforest
+egg_groups = Monster,Plant
+gender_ratio_m = 87.5
+average_hatch_rate_days = 10
+family = Turtwig,Grotle,Torterra
+capabilities = Overland:4,Swim:2,Burrow:2,High Jump:1,Long Jump:1,Power:3,Naturewalk:Grassland,Naturewalk:Forest,Underdog
+height_imperial = 1'4"
+height_metric = 0.4m
+height_class = Small
+weight_imperial = 22.5 lbs.
+weight_metric = 10.2kg
+weight_class = 1
+skills = Athletics:2d6,Acrobatics:2d6,Combat:2d6,Stealth:3d6,Perception:1d6,Focus:3d6+2
+level_moves = 1:Tackle,5:Withdraw,9:Absorb,13:Razor Leaf,17:Curse,21:Bite,25:Mega Drain,29:Leech Seed,33:Synthesis,37:Crunch,41:Giga Drain,45:Leaf Storm
+hm_moves = Cut,Strength
+tm_moves = Toxic,Hidden Power,Sunny Day,Light Screen,Protect,Safeguard,Frustration,Solar Beam,Return,Double Team,Reflect,Facade,Rest,Attract,Round,Energy Ball,Flash,Swords Dance,Grass Knot,Swagger,Sleep Talk,Substitute,Rock Smash
+egg_moves = Amnesia,Body Slam,Double-Edge,Earth Power,Grassy Terrain,Growth,Sand Tomb,Seed Bomb,Spit Up,Stockpile,Superpower,Swallow,Thrash,Tickle,Wide Guard,Worry Seed
+tutor_moves = Bullet Seed,Earth Power,Giga Drain,Grass Pledge,Iron Tail,Mud-Slap,Natural Gift,Rock Climb,Secret Power,Seed Bomb,Sleep Talk,Snore,Stealth Rock,Superpower,Synthesis,Worry Seed
+[Grotle]
+page = 22
+legendary = False
+base_hp = 8
+base_attack = 9
+base_defense = 9
+base_special_attack = 6
+base_special_defense = 7
+base_speed = 4
+types = Grass
+basic_abilities = Shell Armor,Overgrow
+advanced_abilities = Grass Pelt,Sturdy
+high_ability = Natural Cure
+evolutions = Torterra,30
+minimum_level = 15
+diets = Herbivore,Phototroph
+habitats = Forest,Marsh,Rainforest
+egg_groups = Monster,Plant
+gender_ratio_m = 87.5
+family = Turtwig,Grotle,Torterra
+capabilities = Overland:5,Swim:2,High Jump:1,Long Jump:1,Power:4,Naturewalk:Grassland,Naturewalk:Forest,Underdog
+height_imperial = 3'7"
+height_metric = 1.1m
+height_class = Medium
+weight_imperial = 213.8 lbs.
+weight_metric = 97kg
+weight_class = 4
+skills = Athletics:3d6,Acrobatics:2d6,Combat:3d6,Stealth:2d6,Perception:2d6,Focus:4d6+2
+level_moves = 5:Withdraw,9:Absorb,13:Razor Leaf,17:Curse,22:Bite,27:Mega Drain,32:Leech Seed,37:Synthesis,42:Crunch,47:Giga Drain,52:Leaf Storm
+hm_moves = Cut,Strength
+tm_moves = Toxic,Hidden Power,Sunny Day,Light Screen,Protect,Safeguard,Frustration,Solar Beam,Return,Double Team,Reflect,Facade,Rest,Attract,Round,Energy Ball,Flash,Swords Dance,Grass Knot,Swagger,Sleep Talk,Substitute,Rock Smash
+tutor_moves = Bullet Seed,Earth Power,Giga Drain,Grass Pledge,Iron Tail,Mud-Slap,Natural Gift,Rock Climb,Secret Power,Seed Bomb,Sleep Talk,Snore,Stealth Rock,Superpower,Synthesis,Worry Seed
+[Torterra]
+page = 23
+legendary = False
+base_hp = 10
+base_attack = 11
+base_defense = 11
+base_special_attack = 8
+base_special_defense = 9
+base_speed = 4
+types = Grass,Ground
+basic_abilities = Shell Armor,Overgrow
+advanced_abilities = Grass Pelt,Sturdy
+high_ability = Natural Cure
+minimum_level = 30
+diets = Herbivore,Phototroph
+habitats = Forest,Marsh,Rainforest
+egg_groups = Monster,Plant
+gender_ratio_m = 87.5
+family = Turtwig,Grotle,Torterra
+capabilities = Overland:6,Swim:3,High Jump:1,Long Jump:1,Power:7,Groundshaper,Naturewalk:Grassland,Naturewalk:Forest,Planter,Mountable:2
+height_imperial = 7'3"
+height_metric = 2.2m
+height_class = Large
+weight_imperial = 683.4 lbs.
+weight_metric = 310kg
+weight_class = 6
+skills = Athletics:4d6,Acrobatics:1d6,Combat:4d6+2,Stealth:1d6,Perception:3d6,Focus:6d6+2
+level_moves = 5:Withdraw,9:Absorb,13:Razor Leaf,17:Curse,22:Bite,27:Mega Drain,32:Earthquake,33:Leech Seed,39:Synthesis,45:Crunch,51:Giga Drain,57:Leaf Storm
+hm_moves = Cut,Strength
+tm_moves = Road,Toxic,Hidden Power,Sunny Day,Hyper Beam,Light Screen,Protect,Safeguard,Frustration,Solar Beam,Earthquake,Return,Double Team,Reflect,Sandstorm,Rock Tomb,Facade,Rest,Attract,Round,Energy Ball,Giga Impact,Rock Polish,Flash,Stone Edge,Swords Dance,Bulldoze,Rock Slide,Grass Knot,Swagger,Sleep Talk,Substitute,Rock Smash
+tutor_moves = Block,Bullet Seed,Earth Power,Frenzy Plant,Giga Drain,Grass Pledge,Iron Head,Iron Tail,Mud-Slap,Natural Gift,Outrage,Rock Climb,Secret Power,Seed Bomb,Sleep Talk,Snore,Stealth Rock,Superpower,Synthesis,Wood Hammer (N),Worry Seed
+[Snivy]
+page = 24
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height_imperial = 
+height_metric = 
+height_class = 
+weight_imperial = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = 
+tm_moves = 
+egg_moves = 
+tutor_moves = 
+[Servine]
+page = 25
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height_imperial = 
+height_metric = 
+height_class = 
+weight_imperial = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = 
+tm_moves = 
+egg_moves = 
+tutor_moves = 
+[Serperior]
+page = 26
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height_imperial = 
+height_metric = 
+height_class = 
+weight_imperial = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = 
+tm_moves = 
+egg_moves = 
+tutor_moves = 
+[Chespin]
+page = 27
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height_imperial = 
+height_metric = 
+height_class = 
+weight_imperial = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = 
+tm_moves = 
+egg_moves = 
+tutor_moves = 
+[Quilladin]
+page = 28
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height_imperial = 
+height_metric = 
+height_class = 
+weight_imperial = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = 
+tm_moves = 
+egg_moves = 
+tutor_moves = 
+[Chesnaught]
+page = 29
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height_imperial = 
+height_metric = 
+height_class = 
+weight_imperial = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = 
+tm_moves = 
+egg_moves = 
+tutor_moves = 
 [Charmander]
 page = 30
 legendary = False
