Entered Snivy, Servine,Serperior data.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -391,105 +391,100 @@ tutor_moves = Block,Bullet Seed,Earth Power,Frenzy Plant,Giga Drain,Grass Pledge
 [Snivy]
 page = 24
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
-types = 
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
-minimum_level = 
-diets = 
-habitats = 
-egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
-family = 
-capabilities = 
-height_imperial = 
-height_metric = 
-height_class = 
-weight_imperial = 
-weight_metric = 
-weight_class = 
-skills = 
-level_moves = 
-hm_moves = 
-tm_moves = 
-egg_moves = 
-tutor_moves = 
+base_hp = 5
+base_attack = 5
+base_defense = 6
+base_special_attack = 5
+base_special_defense = 6
+base_speed = 6
+types = Grass
+basic_abilities = Sol Veil,Overgrow
+advanced_abilities = Contrary,Leaf Rush
+high_ability = Sway
+evolutions = Servine,15
+minimum_level = 1
+diets = Herbivore
+habitats = Forest,Rainforest
+egg_groups = Field,Plant
+gender_ratio_m = 87.5
+average_hatch_rate_days = 10
+family = Snivy,Servine,Serperior
+capabilities = Overland:5,Swim:3,High Jump:1,Long Jump:2,Power:2,Naturewalk:Grassland,Naturewalk:Forest,Stealth,Underdog
+height_imperial = 2'0"
+height_metric = 0.6m
+height_class = Small
+weight_imperial = 17.9 lbs.
+weight_metric = 8.1kg
+weight_class = 1
+skills = Athletics:2d6,Acrobatics:3d6,Combat:2d6,Stealth:3d6+3,Perception:3d6,Focus:3d6+2
+level_moves = 1:Tackle,4:Leer,7:Vine Whip,10:Wrap,13:Growth,16:Leaf Tornado,19:Leech Seed,22:Mega Drain,25:Slam,28:Leaf Blade,31:Coil,34:Giga Drain,37:Wring Out,40:Gastro Acid,43:Leaf Storm
+hm_moves = Cut
+tm_moves = CalmMind,Toxic,Hidden Power,Sunny Day,Taunt,Light Screen,Protect,Safeguard,Frustration,Solar Beam,Return,Double Team,Reflect,Aerial Ace,Torment,Facade,Rest,Attract,Round,Energy Ball,Flash,Swords Dance,Grass Knot,Swagger,Sleep Talk,Substitute,Nature Power
+egg_moves = Captivate,Glare,Grassy Terrain,Iron Tail,Magical Leaf,Mean Look,Mirror Coat,Natural Gift,Pursuit,Sweet Scent,Twister
+tutor_moves = Aqua Tail,Bind,Gastro Acid,Giga Drain,Grass Pledge,Iron Tail,Knock Off,Seed Bomb,Sleep Talk,Snatch,Snore,Synthesis,Worry Seed
 [Servine]
 page = 25
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
-types = 
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
-minimum_level = 
-diets = 
-habitats = 
-egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
-family = 
-capabilities = 
-height_imperial = 
-height_metric = 
-height_class = 
-weight_imperial = 
-weight_metric = 
-weight_class = 
-skills = 
-level_moves = 
-hm_moves = 
-tm_moves = 
-egg_moves = 
-tutor_moves = 
+base_hp = 6
+base_attack = 6
+base_defense = 8
+base_special_attack = 6
+base_special_defense = 8
+base_speed = 8
+types = Grass
+basic_abilities = Sol Veil,Overgrow
+advanced_abilities = Contrary,Leaf Rush
+high_ability = Sway
+evolutions = Serperior,30
+minimum_level = 15
+diets = Herbivore,Phototroph
+habitats = Forest,Rainforest
+egg_groups = Field,Plant
+gender_ratio_m = 87.5
+family = Snivy,Servine,Serperior
+capabilities = Overland:6,Swim:4,High Jump:2,Long Jump:2,Power:3,Naturewalk:Grassland,Naturewalk:Forest,Stealth,Underdog
+height_imperial = 2'07"
+height_metric = 0.8m
+height_class = Small
+weight_imperial = 35.3 lbs.
+weight_metric = 16.0kg
+weight_class = 2
+skills = Athletics:3d6,Acrobatics:4d6,Combat:3d6,Stealth:4d6+3,Perception:4d6,Focus:4d6+2
+level_moves = 4:Leer,7:Vine Whip,10:Wrap,13:Growth,16:Leaf Tornado,20:Leech Seed,24:Mega Drain,28:Slam,32:Leaf Blade,36:Coil,40:Giga Drain,44:Wring Out,48:Gastro Acid,52:Leaf Storm
+hm_moves = Cut
+tm_moves = Calm Mind,Toxic,Hidden Power,Sunny Day,Taunt,Light Screen,Protect,Safeguard,Frustration,Solar Beam,Return,Double Team,Reflect,Aerial Ace,Torment,Facade,Rest,Attract,Round,Energy Ball,Flash,Swords Dance,Grass Knot,Swagger,Sleep Talk,Substitute,Nature Power
+tutor_moves = Aqua Tail,Bind,Gastro Acid,Giga Drain,Grass Pledge,Iron Tail,Knock Off,Seed Bomb,Sleep Talk,Snatch,Snore,Synthesis,Worry Seed
 [Serperior]
 page = 26
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
-types = 
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
-minimum_level = 
-diets = 
-habitats = 
-egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
-family = 
-capabilities = 
-height_imperial = 
-height_metric = 
-height_class = 
-weight_imperial = 
-weight_metric = 
-weight_class = 
-skills = 
-level_moves = 
-hm_moves = 
-tm_moves = 
-egg_moves = 
-tutor_moves = 
+base_hp = 8
+base_attack = 8
+base_defense = 10
+base_special_attack = 8
+base_special_defense = 10
+base_speed = 11
+types = Grass
+basic_abilities = Sol Veil,Overgrow
+advanced_abilities = Contrary,Leaf Rush
+high_ability = Regal Challenge
+minimum_level = 30
+diets = Herbivore,Phototroph
+habitats = Forest,Rainforest
+egg_groups = Field,Plant
+gender_ratio_m = 87.5
+family = Snivy,Servine,Serperior
+capabilities = Overland:8,Swim 5,High Jump:3,Long Jump:2,Power:5,Naturewalk:Grassland,Naturewalk:Forest,Stealth
+height_imperial = 10'10"
+height_metric = 3.3m
+height_class = Large
+weight_imperial = 138.9 lbs.
+weight_metric = 63kg
+weight_class = 4
+skills = Athletics:3d6,Acrobatics:4d6,Combat:4d6,Stealth:5d6+3,Perception:5d6+2,Focus:6d6
+level_moves = 4:Leer,7:Vine Whip,10:Wrap,13:Growth,16:Leaf Tornado,20:Leech Seed,24:Mega Drain,28:Slam,32:Leaf Blade,38:Coil,44:Giga Drain,50:Wring Out,56:Gastro Acid,62:Leaf Storm
+hm_moves = Cut,Strength
+tm_moves = Calm Mind,Toxic,Hidden Power,Sunny Day,Taunt,Hyper Beam,Light Screen,Protect,Safeguard,Frustration,Solar Beam,Return,Double Team,Reflect,Aerial Ace,Torment,Facade,Rest,Attract,Round,Energy Ball,Giga Impact,Flash,Swords Dance,Dragon Tail,Grass Knot,Swagger,Sleep Talk,Substitute,Rock Smash,Nature Power
+tutor_moves = Aqua Tail,Bind,Dragon Pulse,Frenzy Plant,Gastro Acid,Giga Drain,Grass Pledge,Iron Tail,Knock Off,Outrage,Seed Bomb,Sleep Talk,Snatch,Snore,Synthesis,Worry Seed
 [Chespin]
 page = 27
 legendary = False
