Added Chespin, Quilladin, Chesnaught data. Grass starters now all done.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -488,105 +488,100 @@ tutor_moves = Aqua Tail,Bind,Dragon Pulse,Frenzy Plant,Gastro Acid,Giga Drain,Gr
 [Chespin]
 page = 27
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
-types = 
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
-minimum_level = 
-diets = 
-habitats = 
-egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
-family = 
-capabilities = 
-height_imperial = 
-height_metric = 
-height_class = 
-weight_imperial = 
-weight_metric = 
-weight_class = 
-skills = 
-level_moves = 
-hm_moves = 
-tm_moves = 
-egg_moves = 
-tutor_moves = 
+base_hp = 6
+base_attack = 6
+base_defense = 7
+base_special_attack = 5
+base_special_defense = 5
+base_speed = 4
+types = Grass
+basic_abilities = Bodyguard,Overgrow
+advanced_abilities = Gentle Vibe,Bulletproof
+high_ability = Abominable
+evolutions = Quilladin,15
+minimum_level = 1
+diets = Herbivore
+habitats = Forest,Grassland,Rainforest
+egg_groups = Field
+gender_ratio_m = 87.5
+average_hatch_rate_days = 10
+family = Chespin,Quilladin,Chesnaught
+capabilities = Overland:4,Swim:2,High Jump:1,Long Jump:2,Power:2,Naturewalk:Grassland,Naturewalk:Forest,Underdog
+height_imperial = 1'04"
+height_metric = 0.4m
+height_class = Small
+weight_imperial = 19.8 lbs.
+weight_metric = 9.0kg
+weight_class = 1
+skills = Athletics:3d6,Acrobatics:2d6,Combat:2d6,Stealth:2d6,Perception:2d6,Focus:3d6+1
+level_moves = 1:Tackle,1:Growl,5:Vine Whip,8:Rollout,15:Leech Seed,18:Pin Missile,21:Needle Arm,27:Take Down,32:Seed Bomb,35:Mud Shot,39:Bulk Up,42:Body Slam,45:Pain Split,48:Wood Hammer
+hm_moves = Cut,Strength
+tm_moves = Roar,Toxic,Bulk Up,Hidden Power,Sunny Day,Taunt,Protect,Frustration,Solar Beam,Smack Down,Return,Dig,Brick Break,Double Team,Reflect,Sludge Bomb,Rock Tomb,Aerial Ace,Facade,Rest,Attract,Low Sweep,Round,Energy Ball,Fling,Shadow Claw,Payback,Retaliate,Flash,Stone Edge,Gyro Ball,Swords Dance,Bulldoze,Rock Slide,Poison Jab,Grass Knot,Swagger,Sleep Talk,Substitute,Rock Smash,Nature Power,Power-Up Punch,Confide
+egg_moves = Belly Drum,Curse,Defense Curl,Quick Guard,Rollout,Spikes,Synthesis
+tutor_moves = Drain Punch,Dual Chop,Endeavor,Focus Punch,Giga Drain,Grass Pledge,Helping Hand,Iron Defense,Iron Head,Iron Tail,Low Kick,Pain Split,Seed Bomb,Snore,Super Fang,Superpower,Synthesis,Thunder Punch,Worry Seed
 [Quilladin]
 page = 28
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
-types = 
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
-minimum_level = 
-diets = 
-habitats = 
-egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
-family = 
-capabilities = 
-height_imperial = 
-height_metric = 
-height_class = 
-weight_imperial = 
-weight_metric = 
-weight_class = 
-skills = 
-level_moves = 
-hm_moves = 
-tm_moves = 
-egg_moves = 
-tutor_moves = 
+base_hp = 6
+base_attack = 8
+base_defense = 10
+base_special_attack = 6
+base_special_defense = 6
+base_speed = 6
+types = Grass
+basic_abilities = Bodyguard,Overgrow
+advanced_abilities = Gentle Vibe,Bulletproof
+high_ability = Abominable
+evolutions = Chesnaught,30
+minimum_level = 15
+diets = Herbivore
+habitats = Forest,Grassland,Rainforest
+egg_groups = Field
+gender_ratio_m = 87.5
+family = Chespin,Quilladin,Chesnaught
+capabilities = Overland:5,Swim:3,High Jump:1,Long Jump 2,Power:3,Naturewalk:Grassland,Naturewalk:Forest,Underdog
+height_imperial = 2'04"
+height_metric = 0.7m
+height_class = Small
+weight_imperial = 63.9 lbs.
+weight_metric = 29kg
+weight_class = 3
+skills = Athletics:4d6+2,Acrobatics:2d6,Combat:3d6+1,Stealth:2d6,Perception:2d6,Focus:4d6+1
+level_moves = 1:Tackle,1:Growl,5:Vine Whip,8:Rollout,15:Leech Seed,20:Pin Missile,26:Needle Arm,30:Take Down,35:Seed Bomb,39:Mud Shot,44:Bulk Up,48:Body Slam,52:Pain Split,55:Wood Hammer
+hm_moves = Cut,Strength
+tm_moves = Hone Claws,Roar,Toxic,Bulk Up,Hidden Power,Sunny Day,Taunt,Protect,Frustration,Solar Beam,Smack Down,Return,Dig,Brick Break,Double Team,Reflect,Sludge Bomb,Rock Tomb,Aerial Ace,Facade,Rest,Attract,Low Sweep,Round,Energy Ball,Fling,Shadow Claw,Payback,Retaliate,Flash,Stone Edge,Gyro Ball,Swords Dance,Bulldoze,Rock Slide,Poison Jab,Grass Knot,Swagger,Sleep Talk,Substitute,Rock Smash,Nature Power,Power-Up Punch,Confide
+tutor_moves = Drain Punch,Dual Chop,Endeavor,Focus Punch,Giga Drain,Grass Pledge,Helping Hand,Iron Defense,Iron Head,Iron Tail,Low Kick,Pain Split,Seed Bomb,Snore,Super Fang,Superpower,Synthesis,Thunder Punch,Worry Seed,Zen Headbutt
 [Chesnaught]
 page = 29
 legendary = False
-base_hp = 
-base_attack = 
-base_defense = 
-base_special_attack = 
-base_special_defense = 
-base_speed = 
-types = 
-basic_abilities = 
-advanced_abilities = 
-high_ability = 
-evolutions = 
-minimum_level = 
-diets = 
-habitats = 
-egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
-family = 
-capabilities = 
-height_imperial = 
-height_metric = 
-height_class = 
-weight_imperial = 
-weight_metric = 
-weight_class = 
-skills = 
-level_moves = 
-hm_moves = 
-tm_moves = 
-egg_moves = 
-tutor_moves = 
+base_hp = 9
+base_attack = 11
+base_defense = 12
+base_special_attack = 7
+base_special_defense = 8
+base_speed = 6
+types = Grass,Fighting
+basic_abilities = Bodyguard,Overgrow
+advanced_abilities = Battle Armor,Bulletproof
+high_ability = Abominable
+minimum_level = 30
+diets = Herbivore
+habitats = Forest,Grassland,Rainforest
+egg_groups = Field
+gender_ratio_m = 87.5
+family = Chespin,Quilladin,Chesnaught
+capabilities = Overland:7,Swim:4,High Jump:2,Long Jump:2,Power:7,Naturewalk:Grassland,Naturewalk:Forest
+height_imperial = 5'03"
+height_metric = 1.6m
+height_class = Large
+weight_imperial = 198.4 lbs.
+weight_metric = 90.0kg
+weight_class = 4
+skills = Athletics:5d6+2,Acrobatics:2d6,Combat:5d6,Stealth:2d6,Perception:3d6,Focus:4d6+1
+level_moves = 1:Tackle,1:Growl,5:Vine Whip,8:Rollout,15:Leech Seed,20:Pin Missile,26:Needle Arm,30:Take Down,30:Spiky Shield,35:Seed Bomb,41:Mud Shot,44:Bulk Up,48:Body Slam,52:Pain Split,55:Wood Hammer,60:Hammer Arm,70:Giga Impact
+hm_moves = Cut,Strength
+tm_moves = Hone Claws,Dragon Claw,Roar,Toxic,Bulk Up,Hidden Power,Sunny Day,Taunt,Hyper Beam,Protect,Frustration,Solar Beam,Smack Down,Earthquake,Return,Dig,Brick Break,Double Team,Reflect,Sludge Bomb,Rock Tomb,Aerial Ace,Facade,Rest,Attract,Low Sweep,Round,Focus Blast,Energy Ball,Fling,Shadow Claw,Payback,Retaliate,Giga Impact,Flash,Stone Edge,Gyro Ball,Swords Dance,Bulldoze,Rock Slide,Poison Jab,Grass Knot,Swagger,Sleep Talk,Substitute,Rock Smash,Nature Power,Power-Up Punch,Confide
+tutor_moves = Belly Drum (N),Block,Drain Punch,Dual Chop,Endeavor,Feint (N),Focus Punch,Giga Drain,Frenzy Plant,Grass Pledge,Hammer Arm (N),Helping Hand,Iron Defense,Iron Head,Iron Tail,Low Kick,Pain Split,Seed Bomb,Snore,Super Fang,Superpower,Synthesis,Thunder Punch,Worry Seed,Zen Headbutt
 [Charmander]
 page = 30
 legendary = False
