Filled in Charmeleon, Charizard data.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -629,16 +629,15 @@ gender_ratio_m =
 average_hatch_rate_days = 
 family = Charmander,Charmeleon,Charizard
 capabilities = Overland:6,Swim:5,Sky:8,High Jump:2,Long Jump:3,Power:8,Firestarter,Glow,Heater,Naturewalk:Mountain,Mountable:1
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = 
-level_moves = 
-hm_moves = 
-tm_moves = 
-egg_moves = 
-tutor_moves = 
+height = 5'7",1.7m
+height_class = Medium
+weight = 199.5 lbs.,90.5kg
+weight_class = 4
+skills = Athletics:5d6+2,Acrobatics:3d6,Combat:4d6+3,Stealth:1d6,Perception:2d6,Focus:4d6
+level_moves = 7:Ember,10:Smokescreen,17:Dragon Rage,21:Scary Face,28:Fire Fang,32:Flame Burst,36:Wing Attack,41:Slash,47:Flamethrower,56:Fire Spin,62:Inferno,71:Heat Wave,77:Flare Blitz
+hm_moves = Cut,Fly,Strength
+tm_moves = Hone Claws,Dragon Claw,Roar,Toxic,Hidden Power,Sunny Day,Hyper Beam,Protect,Roost,Frustration,Solar Beam,Earthquake,Return,Dig,Brick Break,Double Team,Flamethrower,Fire Blast,Rock Tomb,Aerial Ace,Facade,Flame Charge,Rest,Attract,Round,Echoed Voice,Overheat,Steel Wing,Focus Blast,Fling,Sky Drop,Incinerate,Will-O-Wisp,Shadow Claw,Giga Impact,Swords Dance,Bulldoze,Rock Slide,Dragon Tail,Swagger,Sleep Talk,Substitute,Rock Smash,Power-Up Punch,Confide
+tutor_moves = Air Cutter,Air Slash(N),Blast Burn,Body Slam,Counter,Defense Curl,Double-Edge,Dragon Claw(N),Dragon Pulse,Dynamic Punch,Fire Pledge,Fire Punch,Focus Punch,Fury Cutter,Growl,Heat Wave,Hold Hands,Iron Tail,Mega Kick,Mega Punch,Metal Claw,Mud-Slap,Ominous Wind,Outrage,Rage,Roost,Seismic Toss,Shadow Claw(N),Sleep Talk,Snore,Steel Wing,Swift,Tailwind,Thunder Punch,Twister
 [Cyndaquil]
 page = 33
 legendary = False
