Added minimum levels for everything so far.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -747,7 +747,7 @@ basic_abilities =
 advanced_abilities = 
 high_ability = 
 evolutions = 
-minimum_level = 
+minimum_level = 1
 diets = 
 habitats = 
 egg_groups = 
@@ -779,7 +779,7 @@ basic_abilities =
 advanced_abilities = 
 high_ability = 
 evolutions = 
-minimum_level = 
+minimum_level = 15
 diets = 
 habitats = 
 egg_groups = 
@@ -811,7 +811,7 @@ basic_abilities =
 advanced_abilities = 
 high_ability = 
 evolutions = 
-minimum_level = 
+minimum_level = 30
 diets = 
 habitats = 
 egg_groups = 
@@ -843,7 +843,7 @@ basic_abilities =
 advanced_abilities = 
 high_ability = 
 evolutions = 
-minimum_level = 
+minimum_level = 1
 diets = 
 habitats = 
 egg_groups = 
@@ -875,7 +875,7 @@ basic_abilities =
 advanced_abilities = 
 high_ability = 
 evolutions = 
-minimum_level = 
+minimum_level = 15
 diets = 
 habitats = 
 egg_groups = 
@@ -907,7 +907,7 @@ basic_abilities =
 advanced_abilities = 
 high_ability = 
 evolutions = 
-minimum_level = 
+minimum_level = 30
 diets = 
 habitats = 
 egg_groups = 
@@ -939,7 +939,7 @@ basic_abilities =
 advanced_abilities = 
 high_ability = 
 evolutions = 
-minimum_level = 
+minimum_level = 1
 diets = 
 habitats = 
 egg_groups = 
@@ -971,7 +971,7 @@ basic_abilities =
 advanced_abilities = 
 high_ability = 
 evolutions = 
-minimum_level = 
+minimum_level = 15
 diets = 
 habitats = 
 egg_groups = 
@@ -1003,7 +1003,7 @@ basic_abilities =
 advanced_abilities = 
 high_ability = 
 evolutions = 
-minimum_level = 
+minimum_level = 30
 diets = 
 habitats = 
 egg_groups = 
@@ -1035,7 +1035,7 @@ basic_abilities =
 advanced_abilities = 
 high_ability = 
 evolutions = 
-minimum_level = 
+minimum_level = 1
 diets = 
 habitats = 
 egg_groups = 
@@ -1067,7 +1067,7 @@ basic_abilities =
 advanced_abilities = 
 high_ability = 
 evolutions = 
-minimum_level = 
+minimum_level = 15
 diets = 
 habitats = 
 egg_groups = 
@@ -1099,7 +1099,7 @@ basic_abilities =
 advanced_abilities = 
 high_ability = 
 evolutions = 
-minimum_level = 
+minimum_level = 30
 diets = 
 habitats = 
 egg_groups = 
